<resources>
    <string name="app_name">Time Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Hello">Hello!</string>
    <string name="welcome">welcome to Time tracker</string>
    <string name="createyour_account">Create Your Account</string>
    <string name="starttime">00:00</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_the_employee_name">Enter the Employee Name</string>
    <string name="add_the_reason_of_leave">Add the reason of leave</string>
    <string name="add">Add</string>
    <string name="Search">Search</string>
</resources>